fixed height of boxes on mobile

--- a/source/stylesheets/components/content.css
+++ b/source/stylesheets/components/content.css
@@ -63,10 +63,6 @@
 
 /*left half styles*/
 
-.content__left-half {
-
-}
-
 #headshot {
   background-image: url('../../images/headshot.jpg');
   background-size:cover;
@@ -103,7 +99,6 @@
 }
 
 .portfolio__featured h2 {
-
   text-align:center;
 }
 .portfolio__featured-text p,  .portfolio__coming-soon-text p, .portfolio__featured h2, .portfolio__coming-soon h3, .portfolio h3 {
@@ -133,6 +128,18 @@
   background-position:center;
   border-radius:5px;
 }
+
+@media only screen
+  and (max-width: 550px) {
+    .portfolio__image {
+      background-size:cover;
+      min-height: 152px;
+    }
+    .portfolio {
+      height: fit-content;
+    }
+  }
+
 
 #iwell {
   background-image: url('../../images/iwell-1.png');
